# Dhalee

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/agents/: advocate.py  architect.py  auditor.py  coach.py  curator.py  graph.py  llm_utils.py  scout.py
backend/app/cv_parser/: parser.py  validator.py
backend/app/search/: __init__.py  base.py  mock_provider.py  tavily_provider.py
frontend/: index.html  package-lock.json  package.json
frontend/public/locales/ar/: translation.json
frontend/public/locales/en/: translation.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  InputSection.tsx  ProgressTracker.tsx  ReadinessReport.tsx  RoadmapView.tsx
